// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataListLoading renders correctly default 1`] = `
<div class="vd-data-list-loading" label="Test">
  <!---->
  <ul class="vd-data-list-loading-items pl-0 vd-column">
    <li class="mr-2">
      <headerloading-stub width="60" height="1.25rem" class="mb-1"></headerloading-stub>
      <headerloading-stub width="90" height="1.5rem" class="mb-2"></headerloading-stub>
    </li>
  </ul>
</div>
`;

exports[`DataListLoading renders with header 1`] = `
<div class="vd-data-list-loading">
  <headerloading-stub width="100" height="1.75rem" class="mb-3 headline"></headerloading-stub>
  <ul class="vd-data-list-loading-items pl-0 vd-column">
    <li class="mr-2">
      <headerloading-stub width="60" height="1.25rem" class="mb-1"></headerloading-stub>
      <headerloading-stub width="90" height="1.5rem" class="mb-2"></headerloading-stub>
    </li>
  </ul>
</div>
`;

exports[`DataListLoading renders with more items 1`] = `
<div class="vd-data-list-loading">
  <!---->
  <ul class="vd-data-list-loading-items pl-0 vd-column">
    <li class="mr-2">
      <headerloading-stub width="60" height="1.25rem" class="mb-1"></headerloading-stub>
      <headerloading-stub width="90" height="1.5rem" class="mb-2"></headerloading-stub>
    </li>
    <li class="mr-2">
      <headerloading-stub width="60" height="1.25rem" class="mb-1"></headerloading-stub>
      <headerloading-stub width="90" height="1.5rem" class="mb-2"></headerloading-stub>
    </li>
    <li class="mr-2">
      <headerloading-stub width="60" height="1.25rem" class="mb-1"></headerloading-stub>
      <headerloading-stub width="90" height="1.5rem" class="mb-2"></headerloading-stub>
    </li>
  </ul>
</div>
`;
